[package]
name = "kawaiifi"
version = "0.1.0"
authors = ["Zach Leytus <zach.leytus@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
byteorder = "1.3.4"
enum_dispatch = "0.3.1"
num_enum = "0.5.0"
thiserror = "1.0.20"

[target.'cfg(target_os = "linux")'.dependencies]
neli = "0.5.0-rc1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"
