[package]
name = "kawaiifi"
version = "0.1.0"
authors = ["Zach Leytus <zach.leytus@pm.me>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bitvec = "0.20.1"
byteorder = "1.3.4"
enum_dispatch = "0.3.5"
enumflags2 = "0.6.4"
num_enum = "0.5.1"
thiserror = "1.0.23"

[target.'cfg(target_os = "linux")'.dependencies]
neli = "0.5.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"
